<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IM Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_result">Image Result</string>
    <string name="title_activity_item_image_result">ItemImageREsult</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="label_size">Image Size</string>
    <string name="label_color">Color Filter</string>
    <string name="label_site">Site Filter</string>
    <string name="lavel_type">Image Type</string>
    <string name="hint_site">"Restrict websites to selected website "</string>
    <string name="label_save">Save</string>

    <string-array name="arr_colors">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
    <string-array name="arr_sizes">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="arr_types">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>